--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);body {
   font-family: "Raleway", sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
+  line-height: 1.6;
   color: #636b6f;
 }
 
 main {
-  border: 1px dotted blue;
+  border: 1px dotted red;
 }
 
