--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -1,6 +1,7 @@
 body {
     font-family: $font-family-body;
     font-size: $font-size-base;
+    line-height: $line-height-base;
     color: $text-color;
 }
 
