--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -17,13 +17,15 @@
 // $brand-danger: #bf5329;
 
 // Colors
+$text-color-body: #636b6f;
 
 // Typography
 $font-family-body: "Raleway", sans-serif;
-$font-size-base: 14px;
-$font-size-larger: 18px;
+$font-size-base: 1rem; //14px
 $line-height-base: 1.6;
-$text-color: #636b6f;
+$font-size-larger: 1.2rem;
+$line-height-lager: 1.6;
+
 
 // // Navbar
 // $navbar-default-bg: #fff;
