--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -17,7 +17,7 @@
 // $brand-danger: #bf5329;
 
 // Colors
-$text-color-body: #636b6f;
+$text-color-body: #222;
 
 // Typography
 $font-family-body: "Raleway", sans-serif;
