--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);/*! normalize.scss v0.1.0 | MIT License | based on git.io/normalize */
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@import url(https://fonts.googleapis.com/css?family=Pacifico);@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);/*! normalize.scss v0.1.0 | MIT License | based on git.io/normalize */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -442,6 +442,36 @@ th {
   padding: 0;
 }
 
+form {
+  max-width: 600px;
+}
+
+.form-group {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  border: 1px solid #ced4da;
+  background-color: white;
+  line-height: 1.5;
+  padding: .5rem .75rem;
+  color: #495057;
+  border-radius: .25rem;
+}
+
+label {
+  width: 100%;
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+/*------------------------------------------------------------------------------
+    BASE
+------------------------------------------------------------------------------*/
+
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -462,20 +492,47 @@ body {
           box-sizing: border-box;
 }
 
-a {
+*,
+::after,
+::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+h1,
+h2 {
+  font-weight: lighter;
+}
+
+a,
+.nav-link {
   text-decoration: none;
   margin: 0;
   padding: 0;
 }
 
-ol {
-  margin: 0;
-  padding-left: 1rem;
+a:hover,
+.nav-link:hover {
+  color: orange;
 }
 
+.list-unstyled {
+  margin: 0;
+  padding-left: 0;
+}
+
+hr {
+  border: 0.5px solid #939292;
+}
+
+/*------------------------------------------------------------------------------
+    HEADER BLADE
+------------------------------------------------------------------------------*/
+
 header {
+  position: fixed;
   width: 100%;
-  height: 4rem;
+  height: 6rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -488,9 +545,25 @@ header {
           justify-content: center;
   background-color: black;
   color: white;
+  -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
 }
 
-header .logo-container {
+header .header-content {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header .header-content .logo-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -509,11 +582,13 @@ header .logo-container {
           flex-grow: 1;
 }
 
-header .logo-container .logo {
+header .header-content .logo-container .logo {
   margin: 0;
+  font-family: "Pacifico";
+  letter-spacing: 0.1rem;
 }
 
-header nav {
+header .header-content nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -521,9 +596,9 @@ header nav {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -534,14 +609,34 @@ header nav {
           flex-grow: 2;
 }
 
-header nav a {
+header .header-content nav a {
   color: white;
+  text-align: center;
+}
+
+header .header-content nav .fa {
+  font-size: 2rem;
 }
 
 main {
   width: 90%;
   border: 1px dotted blue;
+  padding: 10rem 0 15rem;
 }
+
+.task-card {
+  background-color: orange;
+  max-width: 30rem;
+  padding: 0.3rem 1rem 1rem 1rem;
+  border-radius: .25rem;
+  -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
+  margin-bottom: 1.5rem;
+}
+
+/*------------------------------------------------------------------------------
+    FOOTER BLADE
+------------------------------------------------------------------------------*/
 
 footer {
   display: -webkit-box;
@@ -554,6 +649,9 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
   width: 100%;
@@ -562,27 +660,27 @@ footer {
   color: white;
 }
 
-footer .footer-module {
+footer .footer-item {
+  padding-top: 0.8rem;
+  text-align: center;
   width: 90%;
 }
 
-footer .footer-module .footer-item {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+footer .footer-item:last-child {
+  padding-bottom: 2rem;
 }
 
+footer h3,
 footer h4 {
-  padding: 0;
-  margin: 0;
+  margin-bottom: 0;
+}
+
+footer h3 {
+  font-family: "Pacifico";
+  letter-spacing: 0.1rem;
 }
 
 footer a {
   color: white;
-}
-
-footer ol {
-  list-style: none;
-  padding: 0;
 }
 
