--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -21,6 +21,7 @@ $text-color-body: #222;
 
 // Typography
 $font-family-body: "Raleway", sans-serif;
+$font-family-logo:"Pacifico";
 $font-size-base: 1rem; //14px
 $line-height-base: 1.6;
 $font-size-larger: 1.2rem;
