--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,10 +2,16 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+// <script src="https://use.fontawesome.com/cd6945c514.js"></script>
+
+// Forms
+@import "forms";
 
 // Variables
 @import "variables";
 
-@import 'base';
+@import "base";
 
 
