--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -17,7 +17,8 @@
 // $brand-danger: #bf5329;
 
 // Colors
-$text-color-body: #222;
+$text-color-body: #474c4f;
+$btn-color: $text-color-body;
 
 // Typography
 $font-family-body: "Raleway", sans-serif;
