--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -103,7 +103,7 @@ header {
 main {
     width: 90%;
     // max-width: 1200px;
-    border: 1px dotted blue;
+    // border: 1px dotted blue;
     padding: 10rem 0 15rem;
 }
 
