--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -84,18 +84,28 @@ header {
             // border: 1px dotted blue;
             flex-grow: 2;
     
-            a, .icon {
+            a {
                 color: white;
                 text-align: center;
 
                 &:hover {
                     color: orange;
                 }
+
+                .icon {
+                    &:hover {
+                        color: orange;
+                    }
+                }
             }
 
             // .fa {
             //     font-size: 2rem;
             // }
+        }
+
+        .nav-logged-out {
+            justify-content: flex-end;
         }
     } 
 }
@@ -120,10 +130,10 @@ main {
 }
 
 .task-card {
-    background-color: orange;
+    background-color: #f7cd96;
     max-width: 30rem;
     padding: 0.3rem 1rem 1rem 1rem;
-    border-radius: .25rem;
+    // border-radius: .25rem;
     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
     margin-bottom: 1.5rem;
 
