--- a/public/css/app.css
+++ b/public/css/app.css
@@ -661,10 +661,13 @@ main {
   color: #bf5329;
 }
 
+.projects-container,
 .task-card {
   background-color: #f7cd96;
+  width: 90%;
   max-width: 30rem;
-  padding: 0.3rem 1rem 1rem 1rem;
+  height: 30rem;
+  padding: 1rem;
   -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
   margin-bottom: 1.5rem;
