--- a/public/css/app.css
+++ b/public/css/app.css
@@ -454,12 +454,16 @@ form {
 .form-group input,
 .form-group textarea {
   width: 100%;
-  border: 1px solid #ced4da;
-  background-color: white;
+  height: 3rem;
+  border: 1px solid #939292;
+  background-color: white !important;
   line-height: 1.5;
   padding: .5rem .75rem;
-  color: #495057;
-  border-radius: .25rem;
+  outline: none;
+}
+
+.form-group input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 50px white inset;
 }
 
 label {
@@ -469,9 +473,11 @@ label {
 }
 
 button {
+  width: 100%;
+  height: 3rem;
   display: block;
   border: none;
-  background-color: orange;
+  background-color: black;
   color: white;
   font-family: inherit;
   cursor: pointer;
@@ -479,12 +485,11 @@ button {
   font-weight: 700;
   outline: none;
   padding: 0.5rem 0.8rem;
-  border: 3px solid orange;
+  margin-top: 1rem;
 }
 
 button:hover {
-  background-color: white;
-  color: orange;
+  background-color: #383737;
 }
 
 /*------------------------------------------------------------------------------
@@ -552,14 +557,14 @@ hr {
 header {
   position: fixed;
   width: 100%;
-  height: 6rem;
+  height: 8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -567,6 +572,7 @@ header {
   color: white;
   -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 header .header-content {
@@ -587,13 +593,9 @@ header .header-content .logo-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -629,17 +631,27 @@ header .header-content nav {
           flex-grow: 2;
 }
 
-header .header-content nav a {
+header .header-content .nav-item,
+header .header-content .footer-item {
   color: white;
   text-align: center;
+  font-weight: bold;
+  letter-spacing: 1.4px;
 }
 
-header .header-content nav a:hover {
+header .header-content .nav-item .icon,
+header .header-content .footer-item .icon {
+  fill: #fff;
+}
+
+header .header-content .nav-item:hover,
+header .header-content .footer-item:hover {
   color: orange;
 }
 
-header .header-content nav a .icon:hover {
-  color: orange;
+header .header-content .nav-item:hover .icon,
+header .header-content .footer-item:hover .icon {
+  fill: orange;
 }
 
 header .header-content .nav-logged-out {
@@ -649,8 +661,10 @@ header .header-content .nav-logged-out {
 }
 
 main {
+  position: relative;
   width: 90%;
-  padding: 10rem 0 15rem;
+  padding: 10rem 0 0 0;
+  min-height: 40rem;
 }
 
 .success-container {
@@ -661,16 +675,36 @@ main {
   color: #bf5329;
 }
 
+.login-content,
+.register-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.login-container,
 .projects-container,
-.task-card {
-  background-color: #f7cd96;
-  width: 90%;
+.task-card,
+.reg-container {
+  background-color: #e0dede;
+  width: 100%;
   max-width: 30rem;
-  height: 30rem;
-  padding: 1rem;
+  padding: 1rem 1rem 2.5rem 1rem;
   -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
-  margin-bottom: 1.5rem;
+  margin-bottom: 3rem;
 }
 
 .task-card .task-meta {
@@ -725,5 +759,37 @@ footer h3 {
 
 footer a {
   color: white;
+}
+
+@media screen and (min-width: 800px) {
+  header {
+    height: 6rem;
+  }
+
+  header .header-content {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+
+  header .header-content .logo-container {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+
+  /*------------------------------------------------------------------------------
+    FORM STYLING TABLET
+------------------------------------------------------------------------------*/
+
+  button {
+    width: 40%;
+    max-width: 15rem;
+  }
+
+  .reg-btn,
+  .login-btn {
+    min-width: 100%;
+  }
 }
 
