--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -9,13 +9,19 @@ form {
 
     input, textarea {
         width: 100%;
-        border: 1px solid #ced4da;
-        background-color: white;
+        height: 3rem;
+        border: 1px solid $border-color;
+        // border: none;
+        background-color: white !important;
         line-height: 1.5;
         padding: .5rem .75rem;
-        color: #495057;   
-        border-radius: .25rem;
+        // border-radius: .25rem;
+        outline: none;
         // transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    }
+
+    input:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 50px white inset;
     }
 }
 
@@ -30,9 +36,11 @@ input[type=checkbox], input[type=radio] {
 }
 
 button {
+    width: 100%;
+    height: 3rem;
     display: block;
     border: none;
-    background-color: orange;
+    background-color: $btn-color;
     color: white;
     font-family: inherit;
     cursor: pointer;
@@ -40,11 +48,10 @@ button {
     font-weight: 700;
     outline: none;
     padding: 0.5rem 0.8rem;
-    border: 3px solid orange;
+    margin-top: 1rem;
 
     &:hover {
-        background-color: white;
-        color: orange;
+        background-color: $btn-hover-color;
     }
 }
 
