--- a/resources/assets/sass/_tablet.scss
+++ b/resources/assets/sass/_tablet.scss
@@ -22,6 +22,13 @@ button {
 	min-width: 100%;
 }
 
+.icon-btn {
+    justify-content: space-around;
+
+	.btn-txt {
+        padding-left: 0;
+    }
+}
 
 
     
