--- a/public/css/app.css
+++ b/public/css/app.css
@@ -452,7 +452,8 @@ form {
 }
 
 .form-group input,
-.form-group textarea {
+.form-group textarea,
+.form-group select {
   width: 100%;
   height: 3rem;
   border: 1px solid #939292;
@@ -485,7 +486,7 @@ button {
   font-weight: 400;
   outline: none;
   padding: 0.5rem 0.8rem;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 button:hover {
@@ -633,6 +634,7 @@ header .header-content .logo-container .logo {
   margin: 0;
   font-family: "Pacifico";
   letter-spacing: 0.1rem;
+  font-size: 1.8rem;
 }
 
 header .header-content nav {
@@ -662,6 +664,7 @@ header .header-content .footer-item {
   text-align: center;
   font-weight: bold;
   letter-spacing: 1.4px;
+  font-size: 0.8rem;
 }
 
 header .header-content .nav-item .icon,
@@ -731,6 +734,51 @@ main {
   -webkit-box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.6);
   margin-bottom: 3rem;
+}
+
+.project-divider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  border-bottom: 1px solid #939292;
+  padding: 1rem 0;
+  font-weight: 700;
+}
+
+.edit-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 25%;
+}
+
+.edit-container .edit-btn:hover .icon-smaller,
+.edit-container .trash-btn:hover .icon-smaller {
+  fill: orange;
 }
 
 .task-card .task-meta {
@@ -804,8 +852,20 @@ footer a {
             justify-content: flex-start;
   }
 
+  header .header-content .logo-container .logo {
+    font-size: 2rem;
+  }
+
+  header .header-content .nav-item {
+    font-size: 1rem;
+  }
+
+  .edit-container {
+    width: 20%;
+  }
+
   /*------------------------------------------------------------------------------
-    FORM STYLING TABLET
+    FORMS-STYLING TABLET
 ------------------------------------------------------------------------------*/
 
   button {
@@ -816,15 +876,6 @@ footer a {
   .reg-btn,
   .login-btn {
     min-width: 100%;
-  }
-
-  .icon-btn {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-
-  .icon-btn .btn-txt {
-    padding-left: 0;
   }
 }
 
