--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -7,7 +7,7 @@ form {
     display: block;
     margin-bottom: 1rem;
 
-    input, textarea {
+    input, textarea, select {
         width: 100%;
         height: 3rem;
         border: 1px solid $border-color;
@@ -48,7 +48,7 @@ button {
     font-weight: 400;
     outline: none;
     padding: 0.5rem 0.8rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
 
     &:hover {
         background-color: $btn-hover-color;
