--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -39,6 +39,7 @@ a, .nav-link {
 .list-unstyled {
     margin: 0;
     padding-left: 0;
+    list-style-type: none;
 }
 
 hr {
@@ -127,8 +128,20 @@ main {
     color: #2ab27b;
 }
 
+.success-container-center {
+    @extend .success-container;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
 .error-container {
     color: #bf5329;
+}
+
+.error-container-center {
+    @extend .error-container;
+    text-align: center;
+    padding-bottom: 2rem;
 }
 
 .login-content, .register-content {
@@ -202,6 +215,7 @@ footer {
     background-color: $head-foot-color;
     // position: absolute;
     bottom: 0;
+    // margin-bottom: 0;
     color: $btnlink-color;
 
     .footer-item {
