--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,9 +5,12 @@ $btnlink-color: white;
 $head-foot-color: black;
 $btn-color: $head-foot-color;
 $btn-hover-color: #383737;
-$accent-color: orange;
+$accent-color: #e5ae2d;
 $border-color: #939292;
 $box-bg-color: #e0dede;
+$success-color: #2ab27b;
+$error-color: #bf5329;
+$progress-color: #e5ae2d;
 
 // Typography
 $font-family-body: "Raleway", sans-serif;
