--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -67,6 +67,16 @@ button {
     }
 }
 
+.trash-btn {
+    padding: 0;
+    background-color: transparent;
+    margin:0;
+
+    &:hover {
+        background-color: transparent;
+    }
+}
+
 // .radio, {
 //     display: block;
 // }
