editing projects container and footer

--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -1,6 +1,11 @@
 form {
     // border: 1px solid red;
     max-width: 600px;
+    padding-top: 2rem;
+}
+
+.delete-form {
+    padding-top: 0;
 }
 
 .form-group, {
