--- a/public/css/app.css
+++ b/public/css/app.css
@@ -495,7 +495,7 @@ button {
 }
 
 button:hover {
-  background-color: #383737;
+  color: #EA7D1E;
 }
 
 .icon-btn {
@@ -513,6 +513,10 @@ button:hover {
       -ms-flex-pack: start;
           justify-content: flex-start;
   padding: 0.5rem 1.2rem;
+}
+
+.icon-btn:hover .icon-btn {
+  fill: #EA7D1E;
 }
 
 .icon-btn .btn-txt {
@@ -576,7 +580,7 @@ a,
 
 a:hover,
 .nav-link:hover {
-  color: orange;
+  color: #EA7D1E;
 }
 
 .icon {
@@ -691,12 +695,12 @@ header .header-content .footer-item .icon {
 
 header .header-content .nav-item:hover,
 header .header-content .footer-item:hover {
-  color: orange;
+  color: #EA7D1E;
 }
 
 header .header-content .nav-item:hover .icon,
 header .header-content .footer-item:hover .icon {
-  fill: orange;
+  fill: #EA7D1E;
 }
 
 header .header-content .nav-logged-out {
@@ -768,11 +772,9 @@ main {
   margin-bottom: 3rem;
 }
 
-.projects-container {
-  max-width: 60rem;
-}
-
-.project-divider {
+.profile-container {
+  width: 100%;
+  max-width: 50rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -780,20 +782,55 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 2rem;
+}
+
+.profile-img {
+  width: 90%;
+  max-width: 10rem;
+  height: 12rem;
+  margin-right: 2rem;
+  background-color: #939292;
+}
+
+.projects-container {
+  max-width: 100%;
+}
+
+.project-divider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
   border-bottom: 1px solid #939292;
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   font-weight: 700;
+  height: 8rem;
 }
 
-.edit-container {
+.project-column,
+.client-column {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.edit-column {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -810,11 +847,12 @@ main {
   -ms-flex-line-pack: center;
       align-content: center;
   width: 25%;
+  max-width: 5rem;
 }
 
-.edit-container .edit-btn:hover .icon-smaller,
-.edit-container .trash-btn:hover .icon-smaller {
-  fill: orange;
+.edit-column .edit-btn:hover .icon-smaller,
+.edit-column .trash-btn:hover .icon-smaller {
+  fill: #EA7D1E;
 }
 
 /*------------------------------------------------------------------------------
@@ -959,7 +997,32 @@ footer a {
     font-size: 1rem;
   }
 
-  .edit-container {
+  .project-divider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    height: 4rem;
+  }
+
+  .project-column,
+  .client-column {
+    width: 35%;
+    margin-bottom: 0;
+  }
+
+  .edit-column {
     width: 10%;
   }
 
