--- a/resources/assets/sass/_forms.scss
+++ b/resources/assets/sass/_forms.scss
@@ -16,7 +16,6 @@ form {
         width: 100%;
         height: 3rem;
         border: 1px solid $border-color;
-        // border: none;
         background-color: white !important;
         line-height: 1.5;
         padding: .5rem .75rem;
@@ -56,7 +55,8 @@ button {
     margin-top: 2rem;
 
     &:hover {
-        background-color: $btn-hover-color;
+        // background-color: $btn-hover-color;
+        color: $accent-color;
     }
 }
 
@@ -67,6 +67,12 @@ button {
     justify-content: flex-start;
     padding: 0.5rem 1.2rem;
 
+    &:hover {
+        .icon-btn {
+            fill: $accent-color;
+        }
+    }
+    
     .btn-txt {
         padding-left: 1rem;
     }
