--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,7 +5,7 @@ $btnlink-color: white;
 $head-foot-color: black;
 $btn-color: $head-foot-color;
 $btn-hover-color: #383737;
-$accent-color: orange;
+$accent-color:  #EA7D1E;
 $border-color: #939292;
 $box-bg-color: #e0dede;
 $success-color: #2ab27b;
